--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li><a href="https://github.com/JazzKriss21">Jaswanth K</a></li>
                 <li><a href="https://github.com/Shreyas-MS">Shreyas MS</a></li>
                 <li><a href="https://github.com/arihant9">Arihant Jain</a></li>
-              
+                <li><a href="https://github.com/prem-kumar-reddy">N Prem Kumar Reddy</a></li>
             </ul>
         </div>
     </div>
